fixed animation making window width larger, edited checkbox alignment

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,10 @@
   background-color: var(--white);
 }
 
+body{
+  overflow: hidden;
+}
+
 #openScreen {
   z-index: 100;
   position: absolute;
@@ -124,6 +128,7 @@
   align-items: center;
   height: 100vh;
   width: 100vw;
+  overflow-y: clip;
 }
 
 #map {
@@ -134,9 +139,15 @@
   width: 75%;
   z-index: 1;
 }
+
 .legend {
   font-size: 12px;
   padding-right: 5px;
+}
+
+.legend li{
+  display: flex;
+  align-items: center;
 }
 
 .bottom {
